# ats_cinepilot_handoff

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
configs/: ats_1_58.yaml  cv_observer_dense_corridor.yaml  default.yaml  demo_active_corridor.yaml  demo_active_dense_corridor.yaml  demo_active_dense_corridor_with_cv.yaml  demo_active_gentle_curve.yaml  live_probe_ats_dense_local_graph.yaml  live_probe_ats_real_graph.yaml  live_probe_ats_toy_graph.yaml  live_probe_moza_shared_memory.yaml
docs/: ACTIVE_DEMO_EXPERIMENT_LOG.md  ARCHITECTURE.md  CODEX_HANDOFF.md  CODEX_SESSION_PROMPT.md  IMPLEMENTATION_STATUS.md  LOCAL_SETUP.md  PLUGIN_OPTIONS.md  RESEARCH_NOTES.md  RUNBOOK.md  SAFETY.md  SHARED_MEMORY_V2_DESIGN.md  TASK_BOARD.md
scripts/: analyze_shared_memory_v2_capture.py  calibrate_hud.py  capture_shared_memory_v2.py  convert_shared_memory_v2_capture_to_replay.py  demo_override_off.ps1  demo_override_on.ps1  download_cv_models.py  ensure_demo_stop.py  export_demo_dense_corridor.py  export_local_dense_graph.py  export_map.py  extract_curated_corridor_graph.py  fit_demo_dense_corridor.py  inspect_controls.py  inspect_telemetry.py  install_scs_control_plugin.ps1  patch_scs_control_plugin.py  record_telemetry_replay.py  replay_session.py  run_active_dry.ps1  run_cv_observer_dense_corridor.ps1  run_demo_active_corridor.ps1  run_demo_active_dense_corridor.ps1  run_demo_active_dense_corridor_with_cv.ps1  run_demo_active_gentle_curve.ps1  run_shadow.ps1  setup_venv.ps1  summarize_cv_observer_log.py  (+2 more)
(+131 files in other folders)
