[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-cinepilot"
version = "0.1.0"
description = "Scaffold for a navigation-following cinematic autopilot for American Truck Simulator."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "OpenAI ChatGPT for the user"}
]
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.10",
  "PyYAML>=6.0",
  "requests>=2.32",
  "networkx>=3.3",
  "shapely>=2.0",
  "mss>=9.0",
]

[project.optional-dependencies]
windows = [
  "dxcam>=0.0.5",
  "pynput>=1.7.7",
]
gpu = [
  "onnxruntime-gpu>=1.20.0",
]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
ats-cinepilot = "ats_cinepilot.bootstrap:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
